Improved-coupling and Clean code
